--- a/templates/superset.service.j2
+++ b/templates/superset.service.j2
@@ -10,7 +10,7 @@ Environment="{{ key }}={{ value }}"
 {% endif %}
 User={{ superset_user }}
 Type=simple
-ExecStart=/usr/local/bin/superset runserver -p {{ superset_port }} -w {{ superset_workers }}
+ExecStart={{ superset_python_path }} run -p {{ superset_port }} --with-threads --reload --debugger --host=0.0.0.0
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 KillSignal=SIGINT
